added Home link; just more obvious

--- a/templates/html.mustache
+++ b/templates/html.mustache
@@ -20,6 +20,7 @@
           <p>multi-master replication. defined.</p>
         </div>
         <nav>
+          <a href="index">Home</a>
           <a href="spec">Specification</a>
           <a href="databases">Databases</a>
         </nav>
