added simple request debugging
Very handy to see what the request includes.

Add `?debug=true` (or `1`) to any request.

--- a/templates/html.mustache
+++ b/templates/html.mustache
@@ -33,6 +33,7 @@
       </footer>
       </section>
     </div>
+    {{#req}}<textarea class="debug">{{{req}}}</textarea>{{/req}}
     <script src="javascripts/scale.fix.js"></script>
   </body>
 </html>
