--- a/_attachments/stylesheets/styles.css
+++ b/_attachments/stylesheets/styles.css
@@ -382,6 +382,14 @@ a.buttons:hover {
   margin: 0 0 10px;
 }
 
+.debug {
+  bottom: 0px;
+  left: 0px;
+  position: fixed;
+  width: 100%;
+  height: 150px;
+}
+
 /* --------------- Screens bigger than 620px ----------- */
 @media only screen and (min-width: 620px) {
   body {
