added `active` state to navigation
Easier to know where one is.

--- a/templates/html.mustache
+++ b/templates/html.mustache
@@ -20,9 +20,9 @@
           <p>multi-master replication. defined.</p>
         </div>
         <nav>
-          <a href="index">Home</a>
-          <a href="spec">Specification</a>
-          <a href="databases">Databases</a>
+          <a href="index" class="{{#is_active}}index{{/is_active}}">Home</a>
+          <a href="spec" class="{{#is_active}}spec{{/is_active}}">Specification</a>
+          <a href="databases" class="{{#is_active}}databases{{/is_active}}">Databases</a>
         </nav>
       </header>
       <section>
